Add dryRun functionality back using Interceptors instead of Aspects